src/pages/about.css
.aboutPage{
    background-color: rgba(225, 199, 199, 0.661);
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    
}
.about-content{
    width: 50%;
    margin-left: 20px;
    border: 1px solid #3333335d;
    border-radius: 10px;
}
.about-content p{
    font-size: 1.5rem;
    line-height: 2rem;
    color: #333;
    margin-bottom: 1rem;
    padding-left: 40px;
}
.containImage{

    height: 350px;
    width: 350px;
   



}
.myImage{
    height: 100%;
    width: 100%;
    border-radius: 50%;
    border: 2px solid #3333338e;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.219);
    

}

